--- a/FaceMatch/GameViewController.storyboard
+++ b/FaceMatch/GameViewController.storyboard
@@ -26,8 +26,8 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Py1-HV-i4W" customClass="PreviewView" customModule="FaceMatch" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SXx-6O-jny">
-                                        <rect key="frame" x="351" y="32" width="16" height="42"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="SXx-6O-jny">
+                                        <rect key="frame" x="345" y="32" width="22" height="42"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="35"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
@@ -46,13 +46,18 @@
                                     <constraint firstAttribute="height" constant="8" id="HDa-QL-bsG"/>
                                 </constraints>
                             </view>
+                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="hit" translatesAutoresizingMaskIntoConstraints="NO" id="tat-XU-Oeq">
+                                <rect key="frame" x="38" y="-9" width="298" height="285"/>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="tat-XU-Oeq" firstAttribute="centerX" secondItem="703-Rz-emB" secondAttribute="centerX" id="6wm-QX-AbS"/>
                             <constraint firstAttribute="trailing" secondItem="Py1-HV-i4W" secondAttribute="trailing" id="7vr-Bz-A83"/>
                             <constraint firstItem="eF5-Eu-dhf" firstAttribute="leading" secondItem="703-Rz-emB" secondAttribute="leading" id="Afg-Ge-SC1"/>
                             <constraint firstItem="eF5-Eu-dhf" firstAttribute="centerY" secondItem="703-Rz-emB" secondAttribute="centerY" multiplier="0.7" id="BPa-tQ-EsH"/>
                             <constraint firstAttribute="trailing" secondItem="eF5-Eu-dhf" secondAttribute="trailing" id="EZR-eX-nsO"/>
+                            <constraint firstItem="tat-XU-Oeq" firstAttribute="centerY" secondItem="703-Rz-emB" secondAttribute="centerY" multiplier="0.4" id="Mtf-Zq-ci7"/>
                             <constraint firstItem="Py1-HV-i4W" firstAttribute="leading" secondItem="703-Rz-emB" secondAttribute="leading" id="Ogn-HQ-X15"/>
                             <constraint firstItem="W1C-9T-zKU" firstAttribute="top" secondItem="Py1-HV-i4W" secondAttribute="bottom" id="bZf-wF-Yxb"/>
                             <constraint firstItem="Py1-HV-i4W" firstAttribute="height" secondItem="703-Rz-emB" secondAttribute="height" id="cDx-AY-ipy"/>
@@ -60,6 +65,7 @@
                     </view>
                     <connections>
                         <outlet property="finishLineView" destination="eF5-Eu-dhf" id="tIF-eP-nWC"/>
+                        <outlet property="hitImageView" destination="tat-XU-Oeq" id="xq7-5X-lkK"/>
                         <outlet property="previewView" destination="Py1-HV-i4W" id="MYs-f0-YRI"/>
                         <outlet property="scoreLabel" destination="SXx-6O-jny" id="9nt-i9-nGW"/>
                     </connections>
@@ -69,4 +75,7 @@
             <point key="canvasLocation" x="116" y="130.88455772113943"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="hit" width="298" height="285"/>
+    </resources>
 </document>
